--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <header class="text-center mb-12">
             <h1 class="text-4xl md:text-6xl font-black text-[#00A3FF] uppercase tracking-wide">Exame Neurológico em Ruminantes</h1>
-            <p class="text-lg md:text-xl text-gray-600 mt-2">Uma Abordagem Visual para Diagnóstico e Localização de Lesões</p>
+            <p class="text-lg md:text-xl text-gray-600 mt-2">Uma Abordagem para Diagnóstico e Localização de Lesões</p>
         </header>
 
         <main class="space-y-16">
@@ -148,7 +148,7 @@
                 <div class="text-center mb-8">
                     <span class="bg-[#FFC700] text-gray-900 font-bold py-1 px-3 rounded-full text-sm">RELATO DE CASO</span>
                     <h2 class="text-4xl font-black mt-3">Intoxicação por <i>Ipomoea asarifolia</i> ("Salsa")</h2>
-                    <p class="max-w-3xl mx-auto text-gray-300 mt-2">Vamos analisar um caso hipotético para ver como o exame neurológico funciona na prática. A "salsa" é uma planta tóxica comum no semiárido, especialmente perigosa durante a seca.</p>
+                    <p class="max-w-3xl mx-auto text-gray-300 mt-2"> Planta tóxica comum no semiárido, especialmente perigosa durante a seca.</p>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
